# matricLib

./: .gitignore  CMakeLists.txt  Makefile  README.md  csvReader.cpp  csvReader.h  helper.h  matrix.h  test.csv  tests.cpp  tests.h
000-Main/: binaryOP.cpp  binaryOP.hpp  crossOP.cpp  crossOP.hpp  csvReader.cpp  csvReader.hpp  helper.hpp  imTest.cpp  imTest.h  matrix.hpp
001-Test/: tests.cpp  tests.hpp
002-ReadTest/: tests.cpp
